--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@ somewhere: #576f72
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  @apply font-serif;
 }
 ::-webkit-scrollbar {
   display: none;
